{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Mouse",
            "id": "41b78f8e-8697-4802-a6ce-49f6c37a718c",
            "actions": [
                {
                    "name": "MouseMovement",
                    "type": "Value",
                    "id": "6bbfc68b-7ef3-4f11-981e-e70ca536dcf4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "d58cbb2b-1b98-4990-aa14-7822155497f6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3eb3c5ec-1140-496e-8643-0de5eef2cd57",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "760c0595-208c-4ebc-b30f-125614c51e41",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "KeyBoard",
            "id": "8ff69dc7-e0d9-482e-a108-e0adeaa88598",
            "actions": [
                {
                    "name": "SkipTurn",
                    "type": "Button",
                    "id": "e0f928f1-a346-40da-bd53-e2766896951b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e310830c-2762-450d-872b-7aee50432e24",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SkipTurn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}